# AdventOfCode

./: .gitignore  build.bat  newDay.py
2020/: build.bat
2020/Day-01/: makefile
2020/Day-02/: Day-2.cpp  makefile
2020/Day-04/: makefile
2020/Day-05/: makefile
2020/Day-07/: makefile
2020/Day-09/: Day-9.cpp
2020/Day-10/: makefile
2021/Day-01/: CMakeLists.txt  Day-01.cpp  Day_01.cpp  Day_01_Problem.txt  makefile
2021/Day-02/: CMakeLists.txt  Day-02.cpp  makefile
2021/Day-03/: CMakeLists.txt  Day-03.cpp  Day_03_Problem.txt  main.cpp  makefile
2021/Day-04/: CMakeLists.txt  Day_04.cpp
2021/Day-XX/: CMakeLists.txt  Day-XX.cpp  Day_XX.cpp  makefile
2021/Day_02/: Day_02.cpp  Day_02_Problem.txt
2021/Day_03/: CMakeLists.txt
2021/Day_04/: Day_04.cpp  Day_04_Problem.txt
2022/Day_01/: CMakeLists.txt  Day_01.cpp  Day_01_Problem.txt
2022/Day_02/: CMakeLists.txt  Day_02.cpp  Day_02_Problem.txt
Day-1/: makefile
Day-11/: Day-11.cpp  makefile
Day-12/: Day-12.cpp  makefile
Day-2/: makefile
Day-3/: DayThree.cpp  makefile
Day-5/: Day-5.cpp  makefile
Day-6/: makefile
Day-7/: makefile
Day-8/: makefile
Day-9/: makefile
DayEight/: DayEight.cpp  makefile
DayFour/: DayFour.cpp  makefile
DayNine/: DayNine.cpp
DayOne/: DayOne.cpp  makefile
DaySeven/: DaySeven.cpp
DaySix/: DaySix.cpp  makefile
DayTen/: makefile
DayTwo/: input.txt
